test/langtools/tools/javac/patterns/matchers/OverloadedMatchersErrors.out
OverloadedMatchersErrors.java:9:26: compiler.err.no.compatible.matcher.found
OverloadedMatchersErrors.java:16:26: compiler.err.matcher.overloading.ambiguity
OverloadedMatchersErrors.java:28:19: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: int, java.lang.Float)
- compiler.note.preview.filename: OverloadedMatchersErrors.java, DEFAULT
- compiler.note.preview.recompile
3 errors